# infrastructure-catalog-service

./: .asf.yaml  .gitignore  config.yaml  pipservice-catalog-service.service  pyproject.toml  server.py
app/: __init__.py
app/collectors/: __init__.py  ldap.py
app/concepts/: __init__.py  collections.py
app/renderers/: lookup.py  static.py
