[project]
name = "infrastructure-catalog-service"
version = "0.1.0"
description = "ASF Infrastructure Catalog Service"
authors = [
  { name = "ASF Infrastructure", email = "users@infra.apache.org" },
  { name = "ASF Tooling", email = "dev@tooling.apache.org" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asfquart~=0.1.10",
  "pydantic~=2.11.1"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"

[tool.poetry.dependencies]
python = ">=3.10,<4"
djlint = "^1.36.4"
mypy = "^1.15.0"
pre-commit = ">=2.20.0"
ruff = ">=0.9.4"
asfquart = ">=0.1.9"
pydantic = ">=2.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths  = ["tests"]
asyncio_mode = "auto"
